; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_gianfar.c_gfar_enet_open.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_gianfar.c_gfar_enet_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.gfar_private = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*)* @gfar_enet_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gfar_enet_open(%struct.net_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca %struct.gfar_private*, align 8
  %5 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  %6 = load %struct.net_device*, %struct.net_device** %3, align 8
  %7 = call %struct.gfar_private* @netdev_priv(%struct.net_device* %6)
  store %struct.gfar_private* %7, %struct.gfar_private** %4, align 8
  %8 = load %struct.gfar_private*, %struct.gfar_private** %4, align 8
  %9 = getelementptr inbounds %struct.gfar_private, %struct.gfar_private* %8, i32 0, i32 1
  %10 = call i32 @napi_enable(i32* %9)
  %11 = load %struct.gfar_private*, %struct.gfar_private** %4, align 8
  %12 = getelementptr inbounds %struct.gfar_private, %struct.gfar_private* %11, i32 0, i32 2
  %13 = call i32 @skb_queue_head_init(i32* %12)
  %14 = load %struct.net_device*, %struct.net_device** %3, align 8
  %15 = call i32 @init_registers(%struct.net_device* %14)
  %16 = load %struct.net_device*, %struct.net_device** %3, align 8
  %17 = call i32 @gfar_set_mac_address(%struct.net_device* %16)
  %18 = load %struct.net_device*, %struct.net_device** %3, align 8
  %19 = call i32 @init_phy(%struct.net_device* %18)
  store i32 %19, i32* %5, align 4
  %20 = load i32, i32* %5, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %27

22:                                               ; preds = %1
  %23 = load %struct.gfar_private*, %struct.gfar_private** %4, align 8
  %24 = getelementptr inbounds %struct.gfar_private, %struct.gfar_private* %23, i32 0, i32 1
  %25 = call i32 @napi_disable(i32* %24)
  %26 = load i32, i32* %5, align 4
  store i32 %26, i32* %2, align 4
  br label %47

27:                                               ; preds = %1
  %28 = load %struct.net_device*, %struct.net_device** %3, align 8
  %29 = call i32 @startup_gfar(%struct.net_device* %28)
  store i32 %29, i32* %5, align 4
  %30 = load i32, i32* %5, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %37

32:                                               ; preds = %27
  %33 = load %struct.gfar_private*, %struct.gfar_private** %4, align 8
  %34 = getelementptr inbounds %struct.gfar_private, %struct.gfar_private* %33, i32 0, i32 1
  %35 = call i32 @napi_disable(i32* %34)
  %36 = load i32, i32* %5, align 4
  store i32 %36, i32* %2, align 4
  br label %47

37:                                               ; preds = %27
  %38 = load %struct.net_device*, %struct.net_device** %3, align 8
  %39 = call i32 @netif_start_queue(%struct.net_device* %38)
  %40 = load %struct.net_device*, %struct.net_device** %3, align 8
  %41 = getelementptr inbounds %struct.net_device, %struct.net_device* %40, i32 0, i32 0
  %42 = load %struct.gfar_private*, %struct.gfar_private** %4, align 8
  %43 = getelementptr inbounds %struct.gfar_private, %struct.gfar_private* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  %45 = call i32 @device_set_wakeup_enable(i32* %41, i32 %44)
  %46 = load i32, i32* %5, align 4
  store i32 %46, i32* %2, align 4
  br label %47

47:                                               ; preds = %37, %32, %22
  %48 = load i32, i32* %2, align 4
  ret i32 %48
}

declare dso_local %struct.gfar_private* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @napi_enable(i32*) #1

declare dso_local i32 @skb_queue_head_init(i32*) #1

declare dso_local i32 @init_registers(%struct.net_device*) #1

declare dso_local i32 @gfar_set_mac_address(%struct.net_device*) #1

declare dso_local i32 @init_phy(%struct.net_device*) #1

declare dso_local i32 @napi_disable(i32*) #1

declare dso_local i32 @startup_gfar(%struct.net_device*) #1

declare dso_local i32 @netif_start_queue(%struct.net_device*) #1

declare dso_local i32 @device_set_wakeup_enable(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
